--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,21 +4,31 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+- none
 
 pool:
   name: default
 
 steps:
+
 - task: TerraformTask@5
   inputs:
     provider: 'azurerm'
-    command: 'init'
-    backendServiceArm: 'con'
-    backendAzureRmResourceGroupName: 'rg235'
-    backendAzureRmStorageAccountName: 'strglnp'
-    backendAzureRmContainerName: 'container'
-    backendAzureRmKey: 'terraform.tfstate'
+    command: 'custom'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
+    outputTo: 'console'
+    customCommand: 'init -upgrade'
+    environmentServiceNameAzureRM: 'con'
+
+# - task: TerraformTask@5
+#   inputs:
+#     provider: 'azurerm'
+#     command: 'init'
+#     backendServiceArm: 'con'
+#     backendAzureRmResourceGroupName: 'rg235'
+#     backendAzureRmStorageAccountName: 'strglnp'
+#     backendAzureRmContainerName: 'container'
+#     backendAzureRmKey: 'terraform.tfstate'
 
 - task: TerraformTask@5
   inputs:
