--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,11 +22,4 @@ steps:
     backendAzureRmResourceGroupName: 'rg235'
     backendAzureRmStorageAccountName: 'strglnp'
     backendAzureRmContainerName: 'container'
-    backendAzureRmKey: 'terraform.tfstate'
-
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
-    environmentServiceNameAzureRM: 'con'
+    backendAzureRmKey: 'terr.tfstate'
