Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
     backendServiceArm: 'con'
-    backendAzureRmResourceGroupName: 'rg235'
-    backendAzureRmStorageAccountName: 'strglnp'
+    backendAzureRmResourceGroupName: 'rgsidharth'
+    backendAzureRmStorageAccountName: 'strglnp1'
     backendAzureRmContainerName: 'container'
     backendAzureRmKey: 'terr.tfstate'
