--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,30 +1,22 @@
-trigger:
-- main
-- feature
-pool:
-  name: default
+steps: 
+- script: pwd 
+  workingDirectory:
+       C:\Devops
+pool: default 
 
-steps:
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
-    backendServiceArm: 'con'
-    backendAzureRmStorageAccountName: 'new56878'
-    backendAzureRmContainerName: 'con686'
-    backendAzureRmKey: 'terr.tfstate' 
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'plan'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
-    environmentServiceNameAzureRM: 'con' 
-- task: TerraformTask@5
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
-  inputs:
-    provider: 'azurerm'
-    command: 'apply'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/Resource Group'
-    environmentServiceNameAzureRM: 'con'
-    args: '-auto-approve'
+
+trigger: none 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
