Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,11 @@
 pool: Default 
 trigger: none 
+variables: 
+  name: Saurav tripathi
+   
 steps: 
 - script: |
-   echo "Hello saurav Tripathi 
+   echo "Hello $name"
    echo "How are you ?"
    echo "Kha rahte ho tum"
 
