--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,24 @@ variables:
 parameters:
 - name: environment
   type: string
-  default: dev
   values:
   - dev
   - qa
   - prod
+- name: Which server
+  type: string
+  values:
+  - Appache
+  - nginx
+  - IIS
+
+
 
 steps: 
 - script: |
    echo "Hello my name is $(name) and father name is $(father_name)"
    echo "Deploying to ${{ parameters.environment }}"
-   displayName: "Saurav ka Pipeline"
+  displayName: "Saurav ka Pipeline"
 
 
 
