Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,11 @@
-steps:
-  - powershell: mkdir Bond
+trigger: none
+
+pool: Mera Pool 
+
+jobs:
+- job: MyJob
+  displayName: My First Job
+  steps:
+  - script: echo "Hello World"
+
  
