--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,17 +3,18 @@ trigger: none
 pool: Mera Pool
 
 steps: 
-- task: TerraformTask@5
-  inputs:
-    provider: 'azurerm'
-    command: 'init'
-    workingDirectory: 'C:\agent\Workspace\1\s\Environment\dev'
-    backendServiceArm: 'sadfasd'
-    backendAzureRmResourceGroupName: 'Saurav_rg'
-    backendAzureRmStorageAccountName: 'backendstorage1111'
-    backendAzureRmContainerName: 'tfstate'
-    backendAzureRmKey: 'terraform-dev.tfstate'
+
  
 
   
-  
+  - task: TerraformTask@5
+    inputs:
+      provider: 'azurerm'
+      command: 'init'
+      workingDirectory: '$(System.DefaultWorkingDirectory)/Environment/dev'
+      backendServiceArm: 'sadfasd'
+      backendAzureRmOverrideSubscriptionID: 'acd9510d-7e29-433d-8504-d10d34dba654'
+      backendAzureRmResourceGroupName: 'rg1234'
+      backendAzureRmStorageAccountName: 'storageaccount9454'
+      backendAzureRmContainerName: 'tfstate'
+      backendAzureRmKey: 'terraform-dev-tfstate'
