Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ steps:
       provider: 'azurerm'
       command: 'init'
       workingDirectory: '$(System.DefaultWorkingDirectory)/Environment/dev'
-      backendServiceArm: 'sadfasd'
+      backendServiceArm: 'con1'
       backendAzureRmOverrideSubscriptionID: 'acd9510d-7e29-433d-8504-d10d34dba654'
       backendAzureRmResourceGroupName: 'rg1234'
       backendAzureRmStorageAccountName: 'storageaccount9454'
