Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,10 @@
-trigger: none
+trigger:
+  branches: # Branch names to include or exclude for triggering a run.
+    include: 
+      - main
+      - feature1/
+    exclude:
+      - feature2/
 
 pool: Mera Pool
 
